   * atomic masses are in amu unless otherwise stated
   * Options 'cubic'/'hexagonal' to CELL_PARAMETERS removed: it is no 
     longer useful, the code will anyway find the correct sym.ops.
   * Options 'bohr'/'angstrom'/'alat' to CELL_PARAMETERS implemented
   * PHonon: input variable 'elph' replaced by 'electron_phonon'

Fixed in svn version

   * Workaround for frequent crashes in PAW with vc-relax
   * In some cases spin-polarized HSE was yielding NaN's
   * PHonon: an array not always allocated was passed as variable to 
     routine dynmatrix.f90 - harmless but not nice
   * disk_io='low' or 'none' wasn't working if a wavefunction file from a
     previous run was found
   * CP + OpenMP without MPI wasn't working with ultrasoft pseudopotentials
   * Bug in CASINO to UPF converter
   * Bug in k-point generation in the noncollinear case
   * ESM with spin polarization fixed
   * Weird problem with irreps in PHonon
   * Bug in turbo_lanczos.x . Restarts of polarizations other than ipol=1 
     or ipol=4 were not working properly due to buggy test_restart routine.

New in 4.3.2 version

   * A few crystal lattices can be specified using the traditional
     crystallography parameter (labelled with negative ibrav values)
   * A few extensions to PP format converters, conversion to UPF v.2
   * C09 GGA Exchange functional, courtesy of Ikutaro Hamada

Fixed in 4.3.2 version

   * Bugfix for pw2casino: total energies should now agree with pwscf total
     energies for any number of nodes/k-points, also for hybrid functionals. 
     Note: bwfn files produced before and after this patch will differ!
   * Funny results in the last step of variable-cell optimization,
     due to bad symmetrization in presence of fractional translations
   * OpenMP crash with PAW
   * Removed lines in iotk that confused some preprocessors
   * More glitches with new xc functionals, compatibility with 
     previous cases: HF, OEP, PZ